<resources>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Sample Android Design Support Library App</string>
    <string name="floating_labels">Floating Labels</string>
    <string name="fab">Floating Action Button</string>
    <string name="snackbar">Snackbar</string>
    <string name="tabs">Tabs</string>
    <string name="coordinator">Coordinator Layout</string>
    <string name="app_name">UMP Doctor app</string>
    <string name="ump_version_num">Version : 1.0.0 Build 20180611</string>
    <string name="access_code_example">hcsffu</string>
    <string name="access_code_medical">Medical</string>
    <string name="access_code_dental">&#160;&#160;Dental&#160;</string>
    <string name="access_code_caption_msg">Exclusively used by UMP corporate clients or insurance members.</string>
    <string name="login_check_version">A new version is available for download. Would you like to update now?</string>
    <string name="login_check_reminder">Version Update</string>
    <string name="language_zh">中</string>
    <string name="language_en">ENG</string>
    <string name="login_download_full">Full</string>
    <string name="login_download_update">Updates\nOnly</string>
    <string name="check_sum_data_not_match">Server Side Error</string>
    <string name="medical_scheme">\nMedical Scheme</string>
    <string name="last_data_sync_time">Last Updated:</string>
    <string name="disclaimer_warn">You have to agree with disclaimer</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="procedure_title">Procedure</string>
    <string name="disclaimer_startup">Startup Disclaimer\nStartup Disclaimer\nStartup Disclaimer\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\nDisclaimer Content\n</string>
    <string name="disclaimer_important_notes_previous">Previous Page</string>
    <string name="disclaimer_agree">Agree</string>
    <string name="disclaimer_disagree">Disagree</string>
    <string name="disclaimer_ok">OK</string>
    <string name="disclaimer_cancel">Cancel</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="network_title">No Internet Connection</string>
    <string name="network_go_on">Latest data cannot be downloaded and updated. Would you like to continue?</string>
    <string name="network_unavailable">Please check your Internet connection.</string>
    <string name="language_switch_text">Language</string>
    <string name="downlaod_text">Download</string>
    <string name="language_switch_on">Chinese</string>
    <string name="language_switch_off">English</string>
    <string name="access_code_text">Access Code</string>
    <string name="access_code_hint">00000000</string>
    <string name="access_code_btn_text">Login</string>
    <string name="access_code_empty">Please input valid Panel Doctor List Access Code!</string>
    <string name="access_code_invalid">Invalid Code</string>
    <string name="access_code_not">No data found</string>
    <string name="main_temp_info">Access Code</string>
    <string name="info_corporate_scheme_btn">Corporate Scheme</string>
    <string name="info_optional_scheme_btn">Optional Scheme</string>
    <string name="cms_progress_dialog_title">Loading</string>
    <string name="full_download_dialog_msg"> Full download requires more data usage and time to finish, but ensures data integrity. Would you like to continue?</string>
    <string name="full_download_new_dialog_msg"> New access code needs a full download, which will require more data and time to finish. Would you like to continue?</string>
    <string name="full_download_new_app_dialog_msg"> New app version needs a full download, which will require more data and time to finish. Would you like to continue?</string>
    <string name="cms_progress_dialog_msg">Please wait, downloading and updating data &#8230;</string>
    <string name="cms_update_success">Update Success</string>
    <string name="cms_update_fail">Updating Fail</string>
    <string name="general_scheme">General Scheme</string>
    <string name="language_switch_btn_text">English</string>
    <string name="downloading_title">Download</string>
    <string name="downloading_text">Downloading data&#8230;</string>
    <string name="doctor_detail_frag_workhour_text">Opening Hours</string>
    <string name="doctor_detail_frag_map_btn">Map</string>
    <string name="doctor_detail_frag_phone_btn">Call</string>
    <string name="doctor_detail_frag_share_btn">Share Via</string>
    <string name="doctor_detail_frag_share_email">E-mail</string>
    <string name="doctor_detail_frag_share_whatsapp">WhatsApp</string>
    <string name="doctor_detail_emailshare_app">Send E-mail</string>
    <string name="doctor_detail_frag_share_cancel">Cancel</string>
    <string name="google_map_toast">UMP Google Map Toast</string>
    <string name="google_map_title">Google Map</string>
    <string name="google_map_searching">Searching Address&#8230;</string>
    <string name="google_map_no_position_found_toast">Can not find this address</string>
    <string name="invalid_phone_num">Invalid Phone Num</string>
    <string name="doctor_detail_frag_share_sms">SMS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_doctorlist">Doctor List</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_esubmission">ESubmissionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="system_setting">Setting</string>
    <string name="show_tutorial_at_start">Show tutorial at start</string>
    <string name="show_tutorial_zh">Show</string>
    <string name="show_tutorial_en">No Show</string>
    <string name="hong_kong_region">Hong Kong</string>
    <string name="china_region">China</string>
    <string name="macau_region">Macau</string>
    <string name="home_title">Home</string>
    <string name="doctor_list_title">Doctor List</string>
    <string name="non_network_claims">Non-network Claims</string>
    <string name="setting_title">Setting</string>
    <string name="login_instruction">"Login "</string>
    <string name="eclaim_login_disclaimer">Exclusively used by UMP designated clients or insurance members.</string>
    <string name="scheme_code">Scheme Code</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="declaration_and_service_coverage">Declaration and Authorization</string>
    <string name="UMP_Membership_No">Staff’s UMP Membership No.</string>
    <string name="validate_required_scheme_code">Please enter Scheme Code</string>
    <string name="please_enter_first_four_hkid">Please enter first four characters of your HKID as Password.</string>
    <string name="please_select">Please select</string>
    <string name="select_patient">Select Claimant</string>
    <string name="select_type_of_claim">Select Type of Claim</string>
    <string name="change_claim_type_alert_message">Change type of claim will remove selected photo</string>
    <string name="currency_of_the_receipt">Currency of the Receipt</string>
    <string name="total_amount_of_the_receipt">Total Amount of the Receipt</string>
    <string name="submitted_claim_other_insurers">Have you submitted claim request to other insurer(s) with this receipt?</string>
    <string name="amount_already_paid_by_other_insurer">Amount already settled\nby other insurer(s)</string>
    <string name="date_of_consultation">Date of Consultation\n(dd/mm/yyyy)</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="will_submit_claim_to_other_insurers">Will you submitted claim request to \nother insurer(s) with this receipt?</string>
    <string name="will_submit_claim_to_other_insurers_alert_message">If you wish to submit a claim request to other insurer with this receipt, you can download the claim settlement advice from our website after the processing of the claim is completed by UMP</string>
    <string name="change_has_submitted_other_warning">Change of has claim to other will clear the photos</string>
    <string name="validate_total_amount_bigger_than_claim_amount">The total amount cannot be smaller than other claim amount</string>
    <string name="validate_positive_total_claim_amount">Please enter positive number of total claim amount</string>
    <string name="validate_positive_amount_paid_by_other">Please enter positive number of amount claim by others</string>
    <string name="validate_required_consultation_date">Please enter consultation date</string>
    <string name="validate_required_diagnosis">Please enter diagnosis</string>
    <string name="validate_required_currency_limit">It exceeds the maximum claim amount</string>
    <string name="validate_required_recipt_photos">Please add at least one receipt photo</string>
    <string name="validate_required_claim_settlement">Please add at lease one claim settlement document</string>
    <string name="validate_required_referral_letter">Please add at least one referral letter</string>
    <string name="validate_required_submitted_referral_letter_option">Please select submitted referral letter option</string>
    <string name="validate_required_referral_letter_option">Please select referral letter option</string>
    <string name="have_referral_letter_question">Do you have referral letter for this claim?</string>
    <string name="submitted_referral_letter_question">Have you ever submitted \nreferral letter for the same treatment\nwithin 180 days prior to the consultation day?</string>
    <string name="photo_of_receipt">Photo of the receipt (For this claim request)</string>
    <string name="photo_of_claim_settlement">Photo of the Claim settlement Advice from the insurer (For this claim request)</string>
    <string name="photo_of_referral_letter">Photo of the referral letter (For this claim request)</string>
    <string name="add_photo">Add Photo</string>
    <string name="choose_image_source">Please choose your image source</string>
    <string name="camera">Camera</string>
    <string name="photo_album">Photo Album</string>
    <string name="not_have">No</string>
    <string name="confirmation_reference_number_text">Your eClaim request (Ref:%s) has been submitted to UMP and will be processed as soon as possible. \n\nYou are advised to record the Reference number for future enquiry.</string>
    <string name="confirmation_resubmit_text">Do you want to submit another eClaim request now?</string>
    <string name="esubmission_title">eSubmission</string>
    <string name="voucher_tab1">Add Queue</string>
    <string name="voucher_tab2">Medical Voucher Record</string>
    <string name="searchdoctor_title">Search For Doctor</string>
    <string name="medicalcard_title">My Medical CARD</string>
    <string name="voucher_title">My Medical Voucher</string>
    <string name="collection_title">My Collection</string>
    <string name="message_title">Message</string>
    <string name="homepage_title_u">Main Page</string>
    <string name="setting_login_title_u">LOGIN</string>
    <string name="doctorapp_check_evoucher">Check Medical Voucher</string>
    <string name="doctorapp_main_setting">SETTING</string>
    <string name="doctorapp_main_doctorsigntemplate_text">DOCTOR SIGNATURE TEMPLATE</string>
    <string name="doctorapp_menu_uploaddocumentphoto">Upload Document Photo</string>
</resources>