<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:title="@string/homepage_title_u"
            />
        <item
            android:id="@+id/nav_findthedoctor"
            android:title="@string/searchdoctor_title"
            />
        <item
            android:id="@+id/nav_mymedicalcard"
            android:title="@string/medicalcard_title" />
        <item
            android:id="@+id/nav_medicalvoucher"
            android:title="@string/voucher_title" />
        <item
            android:id="@+id/nav_mycollection"
            android:title="@string/collection_title" />
        <item
            android:id="@+id/nav_message"
            android:title="@string/message_title" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting_title" />
        <item
            android:id="@+id/nav_login"
            android:title="@string/setting_login_title_u"
            android:visible="false"/>

    </group>

</menu>
