<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

<android.support.design.widget.TabLayout
android:id="@+id/voucher_tabLayout"
android:layout_width="match_parent"
android:layout_height="54dp"
android:alpha="0.5"
android:background="@color/black"
android:orientation="horizontal"
app:tabBackground="@color/black"
app:tabGravity="fill"
app:tabIndicatorColor="@color/tab_indicator_blue"
app:tabIndicatorHeight="4dp"
app:tabMaxWidth="0dp"
app:tabMode="fixed"
app:tabSelectedTextColor="@color/white"
app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget" >
<android.support.design.widget.TabItem
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/voucher_tab1" />

<android.support.design.widget.TabItem
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/voucher_tab2" />
</android.support.design.widget.TabLayout>

<android.support.v4.view.ViewPager
android:id="@+id/voucher_main_contents"
android:layout_width="match_parent"
android:layout_height="0dp"
android:layout_weight="1"
android:background="@drawable/page_background"
app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

<LinearLayout
android:id="@+id/banner_layout"
android:layout_width="match_parent"
android:layout_height="@dimen/banner_height"
android:background="@color/transparent"
android:orientation="horizontal" >

<ImageView
    android:id="@+id/banner_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@color/transparent"
    android:contentDescription="@string/app_name"
    android:scaleType="fitXY"
    android:src="@drawable/banner_hh_tc" />
</LinearLayout>

</LinearLayout>
