<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background"
    android:orientation="vertical">




    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context="ump.doctorlist.fragment.esubmission.MenuFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_doctorapp_main_uploadphoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/doctorapp_menu_uploaddocumentphoto"
                android:background="@drawable/ump_normal_btn"
                android:textColor="@color/white"
                android:textSize="22sp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <Button
                android:id="@+id/b_doctorapp_main_checkvoucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/doctorapp_check_evoucher"
                android:background="@drawable/ump_normal_btn"
                android:textColor="@color/white"
                android:textSize="22sp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/b_doctorapp_main_doctorsigntemplater"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/doctorapp_main_doctorsigntemplate_text"
                android:background="@drawable/ump_normal_btn"
                android:textColor="@color/white"
                android:textSize="22sp" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />
            <Button
                android:id="@+id/b_doctorapp_main_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/doctorapp_main_setting"
                android:background="@drawable/ump_normal_btn"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>