<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ump.doctorlist.fragment.esubmission.ConfirmationFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/main_title_background"
        android:orientation="horizontal">

        <Space
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/system_setting"
            style="@style/mytextview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/esubmission_title"
            android:textIsSelectable="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="vertical"></LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/tick" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/confirmation_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirmation_reference_number_text" />

    <TextView
        android:id="@+id/confirmation_resubmit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/confirmation_resubmit_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/yes_button"
                    android:layout_width="@dimen/access_enter_btn_width"
                    android:layout_height="@dimen/access_enter_btn_height"
                    android:layout_marginRight="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/ump_normal_btn"
                    android:text="@string/app_yes"
                    style="@style/textview_white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/no_button"
                    android:layout_width="@dimen/access_enter_btn_width"
                    android:layout_height="@dimen/access_enter_btn_height"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/ump_normal_btn"
                    style="@style/textview_white"
                    android:text="@string/not_have" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
